# Daily-StoryBook-Backend-Development

./: .env.example  .gitignore  My Collection.postman_collection.json  README.md  alembic.ini  alembic_offline.sql  dailystorybook.db  pyproject.toml  swagger.json
aioredis/: __init__.py
alembic/: env.py  script.py.mako
alembic/versions/: 20260712_0002_add_routine_macro_columns.py  20260712_0003_create_routine_macro_logs.py  20260713_0004_add_profile_settings_fields.py  20260713_0005_add_storybook_profile_fields.py  20260714_0006_remove_user_username.py  20260718_0007_add_coach_client_assignment_fields.py  20260718_0008_add_coach_client_request_status.py  20260719_0009_unique_nutrition_plan_per_client_day.py  20260719_0010_add_routine_macro_meal_type.py  20260720_0011_add_complete_meal_macros.py  20260720_0012_refine_coach_daily_plans.py  20260720_0013_restore_workout_exercises_text.py  7f068ff28b03_initial_schema_with_onboarding_.py
app/: main.py
app/admin/: __init__.py  resources.py  setup.py  tortoise_models.py
app/api/: router.py
app/core/: __init__.py  config.py  (+2 more)
tests/: test_auth.py  test_coach_client.py  test_health.py  test_nutrition_plan.py  test_nutrition_plan_integration.py  test_onboarding.py  test_profile.py  test_profile_integration.py  test_registration_info_integration.py  test_routine.py  test_routine_macro_integration.py  test_signup_verification_flow.py  test_storybook_ai.py  test_upload.py  test_verification.py  test_verification_service_integration.py  test_weekly_summary.py  test_weekly_summary_integration.py  test_workout_plan.py
(+108 files in other folders)
